// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartCore UnitTest renders correctly with minimal props 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNSVGSvgView
      bbHeight={200}
      bbWidth={400}
      focusable={false}
      height={200}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 200,
            "width": 400,
          },
        ]
      }
      width={400}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      />
    </RNSVGSvgView>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ChartCore UnitTest renders with svg style margins 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNSVGSvgView
      bbHeight={184}
      bbWidth={368}
      focusable={false}
      height={184}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "marginBottom": 8,
            "marginLeft": 16,
            "marginRight": 16,
            "marginTop": 8,
          },
          {
            "flex": 0,
            "height": 184,
            "width": 368,
          },
        ]
      }
      width={368}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      />
    </RNSVGSvgView>
  </View>
</RNCSafeAreaProvider>
`;
